--- a/kartk/kartk.css
+++ b/kartk/kartk.css
@@ -4,18 +4,15 @@ header{
 	overflow: hidden;
 }
 
-h1{
+header h1{
 	margin: 0;
 	text-align: center;
 	padding: 15px;
 	background-color: #398ea5;
 }
 
-nav{
-	background-color: #071a2b;
-}
-
 ul{
+	position: relative;
 	margin: 0;
 	list-style-type: none;
 }
@@ -26,6 +23,10 @@ li{
     margin: 15px 10px;
 }
 
+nav{
+	background-color: #071a2b;
+}
+
 a{
 	text-decoration: none;
 	color: #ffffff;
@@ -33,19 +34,29 @@ a{
 
 body{
 	margin: 0;
-	position: relative;
-
 }
 
 img{
-	display: inline-block;
+	height: 200px;
+	width: 200px;
+	margin: 120px 32px 10px;
 	border-radius: 50%;
-	margin-top: 120px;
-	margin-left: 10px;
 }
 
-footer{
-	position: absolute;
-	width: 100%;
-	margin-bottom: 0;
+div.a{
+	float: right;
+	background-color: #7591ab;
+	text-align: center;
+	height: 200px;
+    width: 45%;
+    margin: 120px 32px 10px;
+}
+
+div.b{
+	background-color: #28e2a7;
+	display: inline-block;
+	height: 200px;
+    width: 45%;
+    margin: 10px 32px;
+    text-align: center;
 }
