--- a/kartk/kartk.css
+++ b/kartk/kartk.css
@@ -1,19 +1,27 @@
-header{
+header,
+footer{
 	position: fixed;
 	width: 100%;
 	overflow: hidden;
 }
 
-header h1{
-	margin: 0;
-	text-align: center;
-	padding: 15px;
-	background-color: #398ea5;
+header{
+	top: 0px;
+}
+
+header > nav > ul{
+	margin-top: 0px;
+}
+
+footer{
+	bottom: 0px;
+}
+
+footer > nav > ul{
+	margin-bottom: 0px;
 }
 
 ul{
-	position: relative;
-	margin: 0;
 	list-style-type: none;
 }
 
@@ -32,31 +40,34 @@ a{
 	color: #ffffff;
 }
 
-body{
-	margin: 0;
-}
-
 img{
+	display: inline-block;
+	float: left;
+	margin-top: 120px;
+	margin-left: 250px;
 	height: 200px;
 	width: 200px;
-	margin: 120px 32px 10px;
 	border-radius: 50%;
 }
 
-div.a{
-	float: right;
-	background-color: #7591ab;
+div.a, div.b{
 	text-align: center;
 	height: 200px;
     width: 45%;
-    margin: 120px 32px 10px;
+    margin-left: 32px;
+    margin-right: 32px;
+}
+
+div.a{
+	display: inline-block;
+	margin-top: 120px;
+	margin-bottom: 120px;
+	margin-left: 255px;
+	background-color: #7591ab;
 }
 
 div.b{
-	background-color: #28e2a7;
 	display: inline-block;
-	height: 200px;
-    width: 45%;
-    margin: 10px 32px;
-    text-align: center;
+	margin-bottom: 120px;
+	background-color: #28e2a7;
 }
