--- a/bootstrap/index.css
+++ b/bootstrap/index.css
@@ -11,6 +11,7 @@ img{
 	border: 4px solid #24c4d7;
 }
 
+
 h1{
 	color: #24c4d7;
 	text-align: center;
@@ -53,4 +54,12 @@ div.p5{
 }
 p.p6{
 	padding: 10px;
+}
+
+#portimg{
+	background-color: #24c4d7;
+}
+
+#portimg  h1{
+	color: #000000;
 }
