--- a/bootstrap/index.css
+++ b/bootstrap/index.css
@@ -1,65 +1,85 @@
-div#img1{
+.ul1{
 	display: inline-block;
-    width: 21%;
-    margin-top: 70px;
-    margin-left: 60px;
-    margin-bottom: 20px;
 }
 
-img{
-	border-radius: 50%;
+#a1{
+	margin-left: 15px;
+}
+
+#button1{
+	margin-right: 30px;
+}
+
+#img1{
+    // width: 250px;
+    height: 250px;
+    margin-top: 70px;
+    margin-bottom: 20px;
+    border-radius: 50%;
 	border: 4px solid #24c4d7;
 }
 
+// #img2{
+// 	width: 250px;
+//     height: 250px;
+// 	margin-top: 20px;
+// 	margin-bottom: 20px;
+// 	border-radius: 50%;
+// 	border: 4px solid #24c4d7;
+// }
+
+#div2{
+	margin-top: 70px;
+}
+
+// #div3{
+// 	margin-top: 20px;
+// }
 
 h1{
-	color: #24c4d7;
 	text-align: center;
-}
-div.p1{
-    height: 250px;
-    width: 69%;
-    float: right;
-    border-radius: 20px;
-    margin-right: 70px;
-    margin-top: 70px;
-}
-p.p2{
-	padding: 10px;
+	background-color: #24c4d7;
+	margin-bottom: 0px;
 }
 
-div.p3{
-	display: inline-block;
-    height: 250px;
-    width: 40%;
-    background-color: #24c4d7;
-    border-radius: 20px;
-    margin-left: 65px;
-    margin-right: 65px;
-    margin-bottom: 20px;
-}
-p.p4{
+.p1{
 	padding: 10px;
-}
-
-div.p5{
-	display: inline-block;
-    height: 250px;
-    width: 40%;
-    background-color: #24c4d7;
-    border-radius: 20px;
-    margin-left: 65px;
-    margin-right: 65px;
-    margin-bottom: 70px;
-}
-p.p6{
-	padding: 10px;
-}
-
-#portimg{
 	background-color: #24c4d7;
 }
 
-#portimg  h1{
-	color: #000000;
+.div1{
+    // background-color: #24c4d7;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
 }
+
+// [class *= "col-"]{
+// 	float: left;
+// 	padding: 10px;
+// }
+
+// .row::after{
+// 	content: "";
+// 	clear: both;
+// 	display: block;
+// }
+
+.div2{
+	// background-color: #24c4d7;
+	margin-bottom: 70px;
+	margin-top: 20px;
+}
+
+#bottom1{
+	margin-bottom: 70px;
+}
+
+// .carousel-inner > .item > img{
+//     width: 40%;
+//     margin: auto;
+// }
+
+// #myCarousel{
+//   	margin-top: 60px;
+// }
