--- a/bootstrap/index.css
+++ b/bootstrap/index.css
@@ -6,12 +6,12 @@
 	margin-left: 15px;
 }
 
-#button1{
-	margin-right: 30px;
+.navbar-fixed-top li{
+	margin-left: 16px;
+	margin-right: 16px;
 }
 
 #img1{
-    // width: 250px;
     height: 250px;
     margin-top: 70px;
     margin-bottom: 20px;
@@ -19,60 +19,47 @@
 	border: 4px solid #24c4d7;
 }
 
-// #img2{
-// 	width: 250px;
-//     height: 250px;
-// 	margin-top: 20px;
-// 	margin-bottom: 20px;
-// 	border-radius: 50%;
-// 	border: 4px solid #24c4d7;
-// }
-
-#div2{
+#top1{
 	margin-top: 70px;
 }
 
-// #div3{
-// 	margin-top: 20px;
-// }
-
 h1{
 	text-align: center;
-	background-color: #24c4d7;
-	margin-bottom: 0px;
+}
+
+#hd1{
+	color: #24c4d7;
+}
+
+.div1{
+    background-color: #24c4d7;
+    border: 5px solid #ffffff;
+}
+
+#hd2{
+	color: #000000;
 }
 
 .p1{
 	padding: 10px;
-	background-color: #24c4d7;
-}
-
-.div1{
-    // background-color: #24c4d7;
-    border-radius: 20px;
-    margin-bottom: 20px;
-    box-sizing: border-box;
-}
-
-// [class *= "col-"]{
-// 	float: left;
-// 	padding: 10px;
-// }
-
-// .row::after{
-// 	content: "";
-// 	clear: both;
-// 	display: block;
-// }
-
-.div2{
-	// background-color: #24c4d7;
-	margin-bottom: 70px;
-	margin-top: 20px;
+	font-size: 18px;
 }
 
 #bottom1{
 	margin-bottom: 70px;
+}
+
+// #button2{
+// 	margin-right: 0px;
+// }
+
+#myNavbar{
+	margin-left: 0px;
+}
+
+.navbar-fixed-bottom li{
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 // .carousel-inner > .item > img{
